# meetink

./: .gitignore  README.md  README.md.txt  agent_architecture_report.md  hi.html  newData.json  project_architecture_report - Copy.md  root.js
backend/: .env.example  README.md  alter_db.py  create_tables.py  download_lfs.py  drop_table.py  main.py  pyproject.toml  test_api.py  test_fallback.py  test_hf.py  test_integrations.py  test_openai.py  test_summary.py
backend/app/: config.py
backend/app/api/: attribution.py  auth.py  integrations.py  knowledge.py  meetings.py  pipeline.py  query.py  voice.py
backend/app/auth/: google_oauth.py
backend/app/db/: database.py  models.py  repository.py  search.py  store.py
backend/app/integrations/: absentee_recap.py  assembly_stt.py  calendar.py  email.py  google_calendar.py  google_tasks.py  linear.py  manager.py
backend/app/llm/: client.py  group_synthesis_agent.py  rag_agent.py
backend/app/pipeline/: README.md
backend/app/pipeline/agents/: README.md  context.py  highlight_agent.py  inferred_insights_agent.py  knowledge_agent.py  summary_recap_agent.py  team_analysis_agent.py  team_prep_agent.py  topic_segregation_agent.py  (+1 more)
backend/app/schemas/: __init__.py  meeting.py
backend/app/services/: group_service.py  knowledge_service.py  meeting_service.py  voice_service.py
backend/scratch/: check_actions.py  test_linear.py  test_payload.py
backend/tests/: test_e2e_pipeline.py  test_normalize.py  test_sliding_summary.py  test_vtt_ingest.py
backend/uploads/: cffa551c-cd15-4793-a196-2dbe00c689e8_budget_deck.pptx
(+142 files in other folders)
