[project]
name = "backend"
version = "0.1.0"
description = "Meeting Intelligence & Action Item Orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.137.2",
    "langchain>=1.3.9",
    "langgraph>=1.2.5",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "webvtt-py>=0.4.6",
    "dateparser>=1.2.0",
    "rapidfuzz>=3.6.0",
    "httpx>=0.27.0",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.3",
    "langchain-ollama>=1.1.0",
    "langchain-groq>=0.1.0",
    "assemblyai>=0.33.0",
    "speechbrain>=1.0.2",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "python-pptx>=1.0.2",
    "python-docx>=1.2.0",
    "pymupdf>=1.27.2.3",
    "comtypes>=1.4.1",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
    "truststore>=0.10.4",
    "resend>=2.32.2",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
